--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,4 @@
 Revision history for Perl extension Umph::Prompt.
 
-0.01  Sat Aug  6 12:51:00 2011
-	- original version; created by h2xs 1.23 with options
-		-AXc -n Umph::Prompt -b 5.10.1
-
+0.1.0  Thu Sep 01 2011  Toni Gundogdu
+    - Initial release
